[gd_scene load_steps=2 format=3 uid="uid://cjiycm1r3ofuo"]

[ext_resource type="Script" uid="uid://d3jfnqas0sy4e" path="res://tests/nodes_in_array_test/nodes_in_array_test.gd" id="1_ccjw3"]

[node name="NodesInArrayTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ccjw3")

[node name="InnerNodeContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 524.0
offset_top = 195.0
offset_right = 1190.0
offset_bottom = 323.0

[node name="AddInnerNodeBtn" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 555.0
offset_top = 763.0
offset_right = 1175.0
offset_bottom = 847.0
theme_override_font_sizes/font_size = 55
text = "ADD NEW INNER NODE"

[node name="PrintInnerNodes" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 637.0
offset_top = 885.0
offset_right = 1106.0
offset_bottom = 969.0
theme_override_font_sizes/font_size = 55
text = "Print Inner nodes"

[connection signal="pressed" from="AddInnerNodeBtn" to="." method="_on_add_inner_node_btn_pressed"]
[connection signal="pressed" from="PrintInnerNodes" to="." method="_on_print_inner_nodes_pressed"]
